# prodigy

./: .debt_analysis.txt  .gitignore  .pre-commit-config.yaml  .tarpaulin.toml  404.html  ARCHITECTURE.md  ARCHITECTURE_ASSESSMENT.md  BOOK_IMPROVEMENTS.md  BOOK_UPDATE_SUMMARY.md  BUG_FAILED_RESUME.md  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_ANALYSIS.md  DUAL_DOCS_QUICKSTART.md  IMPLEMENTATION_GAPS.md  IMPLEMENTATION_GAPS_REPORT.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_LOOP_DIAGRAM.md  Justfile  MIGRATION.md  OPTIMIZATION_RESULTS.md  PRODIGY_EVALUATION_REPORT.md  README.md  RESUME_ANALYSIS.md  RESUME_AND_DLQ_ANALYSIS.md  SPEC_131_GAP_RESOLUTION.md  SPEC_131_STATUS.md  STILLWATER_MIGRATION.md  UI_IMPROVEMENTS.md  VISION.md  YC_APPLICATION.md  _typos.toml  advanced.html  after_files.txt  after_files_norm.txt  analyze_debt.py  automated-documentation.html  (+56 more)
.claude/: settings.json
.eidolon/: ARCHITECTURE.md  CONVENTIONS.md  DECISIONS.md  PROJECT.md  ROADMAP.md
.github/: SECURITY.md
.mmm/: ARCHITECTURE.md  CONVENTIONS.md  DECISIONS.md  PROJECT.md  ROADMAP.md  SPEC_INDEX.md  config.toml  state.json  state.json.corrupted.1754042058078199000  workflow.toml
.prodigy/: ARCHITECTURE.md  CONVENTIONS.md  PROJECT.md  analyze_debt.py  book-config.json  compare_debt.py  completion-summary.md  create_commit_message.py  debtmap-validation.json  documentation-drift-update.json  documentation-drift.json  map-results.json  mkdocs-config.json  plan-item_0.md  plan-item_1.md  plan-item_2.md  plan-item_3.md  plan-item_4.md  plan-item_5.md  plan-item_6.md  plan-item_7.md  plan-item_8.md  plan-item_9.md  validate_debtmap.py  validation.json
advanced/: best-practices.html  common-patterns.html  goal-seeking-operations.html  implementation-validation.html  index.html  parallel-iteration-with-foreach.html  step-identification.html  timeout-configuration.html
automated-documentation/: advanced-configuration.html  automatic-gap-detection.html  benefits.html  best-practices.html  customization-examples.html  documentation-versioning.html  github-actions-integration.html  index.html  installation.html  next-steps.html  quick-start-30-minutes.html  quick-start.html  real-world-example-prodigys-own-documentation.html  troubleshooting.html  tutorial.html  understanding-the-workflow.html
benches/: checkpoint_benchmarks.rs  cloning_performance.rs  execution_benchmarks.rs  expression_bench.rs  git_operations_bench.rs  mapreduce_benchmarks.rs  memory_benchmarks.rs  phase_execution_benchmarks.rs  regression.rs  semigroup_benchmarks.rs  storage_abstraction_benchmarks.rs  storage_benchmarks.rs  unified_execution_bench.rs  worktree_benchmarks.rs
benches.disabled/: checkpoint_benchmarks.rs  expression_bench.rs
book/: book.toml
commands/: index.html
composition/: best-practices.html  complete-examples.html  composition-metadata.html  default-values.html  further-reading.html  index.html  parameter-definitions.html  related-chapters.html  sub-workflows.html  template-system.html  troubleshooting.html  workflow-extension-inheritance.html
configuration/: best-practices.html  complete-configuration-examples.html  configuration-precedence-rules.html  default-values-reference.html  environment-variables.html  global-configuration-structure.html  index.html  migration-guide-toml-to-yaml.html  project-configuration-structure.html  related-documentation.html  storage-configuration.html  troubleshooting.html  workflow-configuration.html
docs/: CLONING_STRATEGIES.md  MDBOOK_MKDOCS_SYNC_STANDALONE.md  MKDOCS_MIGRATION_PLAN.md  MKDOCS_NAV_ANALYSIS.md  MVP_LAUNCH.md  PRODIGY_WHITEPAPER.md  README.md  SHARED_CONTENT_STRATEGY.md  SINGLE_SOURCE_SETUP.md  SYNC_TOOL_DECISION.md  book-documentation-workflow.md  commands.md  debtmap_example_usage.md  development-loop-flow.md  error-context-migration-guide.md  error-handling.md  examples.md  functional-core-pattern.md  git-context-advanced.md  goal-seeking.md  improvements_for_mmm.md  index.md  input_abstraction.md  installation.md  mapreduce-resume-guide.md  mapreduce-worktree-architecture.md  perfect_loop.md  refactoring-guide.md  resume-workflows.md  stillwater-pattern-mapping.md  stillwater-validation-migration.md  streaming.md  testing-improvements.md  workflow-syntax.md
environment/: best-practices.html  common-patterns.html  environment-files.html  environment-precedence.html  environment-profiles.html  index.html  mapreduce-environment-variables.html  per-command-environment-overrides.html  secrets-management.html
error-context-migration-guide/: index.html
examples/: README.md  analysis-workflow.yml  capture-conditional-flow.yml  capture-json-processing.yml  capture-output-custom-vars.yml  capture-parallel-analysis.yml  code-review.yml  complex-build-pipeline.yml  coverage-simplified.yml  coverage-with-test-debug.yml  coverage.yml  custom-analyzer.yml  custom_workflow.toml  custom_workflow.yml  debug-continue.yml  debug-with-spec.yml  debug.yml  default.yml  demo-focus.yml  documentation-workflow.toml  documentation-workflow.yml  full-stack-workflow.toml  implement-with-new-syntax.yml  implement-with-tests.yml  implement.yml  index.html  iterative-refinement-workflow.toml  mapreduce-command-input.yml  mapreduce-json-input.yml  mixed-focus-workflow.yml  performance-workflow.toml  performance-workflow.yml  product-enhancement-workflow.yml  quick-fix-workflow.toml  quick-fix-workflow.yml  refactoring-workflow.toml  refactoring-workflow.yml  security-workflow.toml  security-workflow.yml  security.yml  (+12 more)
git-context-advanced/: index.html
installation/: index.html
mapreduce/: backoff-strategies.html  checkpoint-and-resume.html  dead-letter-queue-dlq.html  environment-variables-in-configuration.html  error-collection-strategies.html  event-tracking.html  global-storage-architecture.html  index.html  setup-phase-advanced.html  workflow-format-comparison.html
mapreduce-worktree-architecture/: index.html
migrations/: 20250125000000_initial_schema.sql  20250125000001_workflow_schema.sql  20250126000002_loop_sessions.sql
(+2198 files in other folders)
