[package]
name = "mmm"
version = "0.1.0"
edition = "2021"
authors = ["Glen Baker <iepathos@gmail.com>"]
description = "Memento Mori - A self-sufficient loop implementation for Claude CLI"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.45", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
log = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"
regex = "1.11"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
directories = "5.0"
notify = "6.1"
tempfile = "3.10"
gray_matter = "0.2"
shell-words = "1.1"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tera = "1.19"
sha2 = "0.10"
petgraph = "0.6"
uuid = { version = "1.10", features = ["v4", "serde"] }
futures = "0.3"
pest = "2.7"
pest_derive = "2.7"
glob = "0.3"
whoami = "1.5"
sys-info = "0.9"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
once_cell = "1.19"
semver = { version = "1.0", features = ["serde"] }
dirs = "5.0"
rand = "0.8"
# atty removed - using std::io::IsTerminal instead
md5 = "0.7"
syn = { version = "2.0", features = ["full", "visit"] }
signal-hook = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1.39", features = ["json", "redactions"] }
