[package]
name = "prodigy"
version = "0.1.8"
edition = "2021"
authors = ["Glen Baker <iepathos@gmail.com>"]
description = "Turn ad-hoc Claude sessions into reproducible development pipelines with parallel AI agents"
license = "MIT"
repository = "https://github.com/iepathos/prodigy"
readme = "README.md"
keywords = ["ai", "claude", "code-review", "automation", "development"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.45", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
log = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"
regex = "1.11"
humantime-serde = "1.1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.9"
directories = "6.0"
notify = "8.2"
tempfile = "3.10"
gray_matter = "0.3"
shell-words = "1.1"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "native-tls"] }
tera = "1.19"
sha2 = "0.10"
petgraph = "0.8"
uuid = { version = "1.10", features = ["v4", "serde"] }
lru = "0.12"
futures = "0.3"
futures-util = "0.3"
pest = "2.7"
pest_derive = "2.7"
glob = "0.3"
mime_guess = "2.0"
url = "2.5"
whoami = "1.5"
sys-info = "0.9"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
once_cell = "1.19"
semver = { version = "1.0", features = ["serde"] }
dirs = "6.0"
rand = "0.9"
csv = "1.3"
# atty removed - using std::io::IsTerminal instead
md5 = "0.8"
syn = { version = "2.0", features = ["full", "visit"] }
signal-hook = "0.3"
indicatif = "0.18"
flate2 = "1.0"
tokio-tungstenite = "0.27"
tokio-stream = "0.1"
hostname = "0.4"
nix = { version = "0.30", features = ["signal", "process"] }
sysinfo = "0.37.0"

[features]
default = []
# Enable vendored OpenSSL for static linking (useful for musl builds)
vendored-openssl = ["reqwest/native-tls-vendored"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tokio-test = "0.4"
criterion = { version = "0.7", features = ["html_reports"] }
insta = { version = "1.39", features = ["json", "redactions"] }

# Benchmarks temporarily disabled - need to update to match new APIs
# [[bench]]
# name = "checkpoint_benchmarks"
# harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(never)'] }

# [[bench]]
# name = "unified_execution_bench"
# harness = false

# [[bench]]
# name = "expression_bench"
# harness = false
